--- a/package.xml
+++ b/package.xml
@@ -15,6 +15,8 @@
   <depend>libopencv-dev</depend>
   <depend>rmf_obstacle_msgs</depend>
 
+  <exec_depend>tf2_ros</exec_depend>
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
